--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,17 @@ body {
 img {
   max-width: 100%; }
 
+.main-title {
+   -webkit-text-stroke: 1px black;
+   color: white;
+   text-shadow:
+       3px 3px 0 #03C0C1,
+     -1px -1px 0 #03C0C1,  
+      1px -1px 0 #03C0C1,
+      -1px 1px 0 #03C0C1,
+       1px 1px 0 #03C0C1;
+}
+
 a:focus,
 input:focus,
 textarea:focus,
